<resources>
    <string name="app_name">androidRecycle</string>
    <string name="goto_register">First time using the app? Register</string>
    <string name="here">here</string>
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="empty_string"> </string>
    <string name="login">Login</string>
    <string name="wrong_credentials">Your Username and Password don\'t match\nTry again or register</string>
    <string name="retry">Try Again</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter you desired username:</string>
    <string name="enter_password">Enter your password:</string>
    <string name="reenter_password">Please re-enter you password:</string>
    <string name="cancel">Cancel</string>
    <string name="successful_registration">Congratulations! You registered successfully</string>
    <string name="continues">Continue</string>
    <string name="home">Home</string>
    <string name="rewards">Rewards</string>
    <string name="logout">Log-Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_account">My Account</string>
    <string name="location">Map</string>
    <string name="map">Map</string>
    <string name="logoutOrExit">Exit or Log-Out</string>
    <string name="exit">Exit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="check">Check</string>
    <string name="available">Rewards available</string>
    <string name="requests">Requests</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>